[project]
name = "topics-cv-service-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "ultralytics>=8.3.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ✅ forma correcta para uv
[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
